AC_PREREQ([2.57])

AC_INIT(libgoback, 0.1, user@mail.com)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

#AM_CONFIG_HEADER(config.h)

# Check for progs
AC_PROG_CXX
AC_PROG_LIBTOOL

# Check for dependencies
#PKG_CHECK_MODULES(YYY, [yyy >= 0.1])
#AC_SUBST(YYY_CFLAGS)
#AC_SUBST(YYY_LIBS)

AC_OUTPUT([Makefile
    include/Makefile
    src/Makefile
    libgoback.pc])
