noinst_LTLIBRARIES = libDataFormat.la

AM_CPPFLAGS = -I$(top_srcdir)/src/ -I$(top_srcdir)/include/

libDataFormat_la_LDFLAGS = -lpng
libDataFormat_la_SOURCES = \
	DataFormat.cpp \
	DataFormatElf.cpp \
	DataFormatElf.h \
	DataFormatExe.cpp \
	DataFormatExe.h \
	DataFormatPng.cpp \
	DataFormatPng.h \
	DataFormatRaw.cpp \
	DataFormatRaw.h
